@@ -1,3 +1,8 @@
+2012-05-08  Borut Razem  <borutr@users.sourceforge.net>
+  * libgputils/gpcofflink.c, libgputils/gpmessage.c:
+    fixed bug #3153394: PIC18 - relative branch - revision v595:
+    added warning for odd target address to the linker
+
 2012-05-25  Borut Razem  <borutr@users.sourceforge.net>
   * doc/Makefile.am, doc/Makefile.in:
     force copying gputils.lyx if out-of-source-tee
@@ -174,7 +179,7 @@
 2011-12-10  Borut Razem  <borutr@users.sourceforge.net>
   * gpasm/directive.c, gpasm/gperror.c, gpasm/gperror.h:
     fixed bug #3153394: PIC18 - relative branch - revision v595:
-    added warnig for odd traget address;
+    added warning for odd target address;
     code generated for odd target address is now equal to the code 
     generated by MPASM
   * gpasm/gpasm.c, libgputils/gpcoff.h, gputils/gpvo.c:
